apps/lina-site/versioned_docs/version-0.2.x/docs/2000-components/4000-admin-workspace.md
---
slug: '/docs/admin-workspace'
title: '默认管理工作台'
hide_title: true
description: '本文从组件设计角度介绍 LinaPro 默认管理工作台 lina-vben，说明它如何作为主框架服务和插件系统的标准前端消费者，承载权限管理、系统设置、任务调度、多租户管理、插件治理、开发中心和动态插件页面，同时保持与后端 API契约、菜单权限和国际化资源的一致性。'
keywords:
  - lina-vben
  - 默认管理工作台
  - Vue3
  - Vben5
  - Ant Design Vue
  - 管理后台
  - 动态菜单
  - 插件页面
  - 权限管理
  - 任务调度
  - 多租户管理
  - 插件管理
  - 接口文档
  - 开发中心
  - RBAC
  - 前端工作台
  - 动态路由
  - workspace.basePath
  - /admin
  - LinaPro
---

## 基本介绍

`lina-vben`是`LinaPro`内置的默认管理工作台，基于`Vue 3 + Vben5 + Ant Design Vue + TypeScript`构建。它不是业务逻辑的定义者，而是`lina-core`主框架`API`和所有已启用插件`API`的标准`UI`表达层。

开发者可以直接基于它构建业务应用，也可以替换为自定义前端。只要新的前端遵循主框架公开的`RESTful API`和权限模型，就能接入同一套后端能力。

默认管理工作台的本地开发入口是`http://localhost:5666/admin`。其中`/admin`来自公开前端配置`workspace.basePath`，用于确定工作台`Vue Router`基准路径和资源解析边界；主框架接口默认监听`http://localhost:9120`，不要把主框架接口地址加上`/admin`当作默认工作台地址。

## 技术栈

| 技术 | 说明 |
|------|------|
| `Vue 3` | 前端框架 |
| `Vben5` | 企业级管理工作台基础框架 |
| `Ant Design Vue` | 后台管理界面组件库 |
| `TypeScript` | 类型约束和前端工程质量保障 |
| `Vite` | 前端构建工具 |
| `Pinia` | 前端状态管理 |
| `TailwindCSS` | 样式工具链 |

## 设计边界

### 工作台消费契约，不定义契约

工作台从主框架读取菜单、权限、用户、角色、配置、任务、插件状态和接口文档等数据。接口行为由后端`API`契约定义，工作台只负责组织交互体验。

### 菜单来自主框架治理数据

侧边栏不是纯前端硬编码结果。主框架返回菜单树时会合并内置菜单和已启用插件声明的菜单，并根据当前用户权限过滤。插件禁用后，菜单和路由入口会自动消失。

### 插件页面通过动态页壳加载

源码插件和动态插件都可以声明前端页面。工作台通过`system/plugin/dynamic-page`页壳承载插件页面，减少插件接入时对工作台代码的侵入。

动态插件的运行时前端入口通常来自`/x-assets/{plugin-id}/{version}/...`公开资产，并通过菜单`query.pluginAccessMode: embedded-mount`声明内嵌挂载模式。源码插件页面通常在工作台构建阶段编译进前端产物，也可以使用`public_assets`托管明确适合匿名访问的静态资源。

## 功能模块

工作台提供的是主框架和插件能力的可视化入口。不同模块的后端归属不同，但用户在界面中获得统一体验。

| 模块 | 主要能力 | 来源 |
|------|----------|------|
| **权限管理** | 用户、角色、菜单、按钮权限、权限分配 | 主框架 |
| **系统设置** | 字典、参数、文件管理、运行配置 | 主框架 |
| **任务调度** | 任务、分组、执行日志、手动触发 | 主框架 |
| **多租户管理** | 租户、成员、租户切换、租户插件治理 | `multi-tenant`插件 |
| **组织管理** | 部门、岗位 | `org-center`插件 |
| **内容管理** | 通知公告 | `content-notice`插件 |
| **系统监控** | 在线用户、服务监控、操作日志、登录日志 | `monitor-*`插件 |
| **扩展中心** | 插件发现、安装、启用、禁用、升级、卸载 | 主框架与插件系统 |
| **开发中心** | 接口文档、系统信息 | 主框架 |

## 权限管理体验

权限管理围绕`RBAC`模型展开：

```mermaid
graph LR
    User["用户"] --> Role["角色"]
    Role --> Menu["菜单与按钮"]
    Menu --> Perm["权限标识"]
    API["API请求"] --> Check["权限校验"]
    Check --> Perm
```

用户管理、角色管理和菜单管理分别承担账号、授权集合和权限树维护。角色勾选菜单或按钮权限后，权限拓扑会快速生效；在集群模式下，主框架通过缓存修订机制通知其他节点刷新。

## 插件菜单动态注入

插件菜单的注入链路如下：

```mermaid
sequenceDiagram
    participant UI as lina-vben
    participant Core as lina-core
    participant Plugin as 已启用插件

    UI->>Core: GET /api/v1/menu
    Core->>Core: 读取主框架菜单和用户权限
    Core->>Plugin: 投影插件菜单声明
    Plugin-->>Core: 返回插件菜单和按钮权限
    Core-->>UI: 返回完整菜单树
    UI->>UI: 渲染侧边栏和动态路由
```

这种设计让插件启用、禁用和权限变更都能通过主框架治理数据驱动，工作台无需为每个插件单独改代码。

## 扩展中心

扩展中心是插件运行时治理的主要界面。它展示插件类型、版本、状态、运行时升级状态、依赖关系和可用操作。

常见操作包括：

| 操作 | 说明 |
|------|------|
| **安装** | 执行依赖检查、安装`SQL`并写入治理记录 |
| **启用** | 注册菜单、路由、钩子、定时任务并激活业务入口 |
| **禁用** | 隐藏菜单和路由，保留插件数据 |
| **卸载** | 清理治理记录，并按用户选择决定是否清理插件自有数据 |
| **升级** | 对`pending_upgrade`或`upgrade_failed`插件执行显式运行时升级 |
| **上传动态插件** | 上传`.wasm`产物，进入动态插件发现和治理流程 |

插件列表读取的是后端完整投影缓存。打开列表不会隐式触发插件同步写入；显式同步、上传、安装、启用、禁用、卸载和升级等操作会刷新缓存。界面中的插件类型显示为“源码插件”或“动态插件”，动态插件底层即使是`WASM`产物，也仍归入“动态插件”治理类型。

## 开发中心

开发中心聚合主框架和插件接口文档，开发者可以查看`OpenAPI`文档、请求参数、响应结构和权限标识，并直接发起调试请求。在线调试会使用当前登录用户的认证状态，写操作会产生真实数据变更，应在测试环境谨慎使用。

## 默认账号

本地演示环境通常使用以下默认账号：

| 字段 | 值 |
|------|----|
| 用户名 | `admin` |
| 密码 | `admin123` |
| 默认工作台地址 | `http://localhost:5666/admin` |
| 前端开发服务器 | `http://localhost:5666` |

生产环境应在初始化后立即修改默认密码，并按组织安全策略配置角色和权限。

## 扩展建议

如果要在默认工作台上扩展业务功能，优先通过插件声明菜单、页面和`API`，而不是直接改工作台内部模块。只有当你要调整全局布局、主题、登录页或通用交互规范时，才需要修改`lina-vben`自身。
